--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "express": "^4.17.1",
     "socket.io": "^2.3.0"
   },
+  "devDependencies": {
+    "@shopify/prettier-config": "^1.1.2"
+  },
   "engines": {
     "node": "12.x"
   },
+  "prettier": "@shopify/prettier-config",
   "repository": {
     "url": "https://github.com/atesgoral/frekvens-fjarrkontroll"
   },
