--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "assemblyscript": "^0.26.2",
-    "binaryen": "^111.0.0-nightly.20230111",
+    "assemblyscript": "0.26.2",
+    "binaryen": "111.0.0-nightly.20230111",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
